# baking-session-boilerplate

./: .gitignore  A2AStarterGuide.md  BestPractices.md  agent_api_data.db  client.py  client_secret_bakeoff.json  requirements.txt
Agents/: README.md  __main__.py  agent_executor.py  api.py  main.py  pyproject.toml  requirements.txt  utils.py
Agents/root_agent/: agent.py  prompt.py
Agents/root_agent/sub_agents/calculator_agent/: agent.py  prompt.py
Agents/root_agent/sub_agents/coding_agent/: agent.py  prompt.py
Agents/root_agent/sub_agents/data_visualisation_agent/: agent.py  prompt.py  tools.py
Agents/root_agent/sub_agents/transform_agent/: agent.py  prompt.py
Agents/root_agent/sub_agents/vertex_agent/: agent.py  config.py  prompt.py  tools.py  utils.py
Vertex/: AgentEngine.py  Reasoning.py  parsingai.py  process_invoice.py  rag_file_manager.py  vertexAI.py  vertex_agent_example.py
a2a_protocol/: README.md
a2a_protocol/karley_agent_adk/: __main__.py  agent.py  agent_executor.py
a2a_remote_agent/: agent.py
a2a_root_agent/: agent.py
my-app/: package-lock.json  package.json
my-app/app/: layout.tsx  page.tsx
my-app/components/: banking-hero.tsx  chatbot.tsx  closing-cta.tsx  feature-highlights.tsx  rate-snapshot.tsx  trust-signals.tsx
my-app/stores/: useAgentStore.ts
